Tuning of streams